# rust-axum-template

./: Cargo.toml  README.md
src/: app_state.rs  error.rs  main.rs
src/models/: hello.rs
src/routes/: hello.rs  mod.rs
